<resources>
    <string name="app_name">TaurusX Inner</string>

    <string name="networks_test">Network Test</string>
    <string name="stratege_test">LoadMode Test</string>
    <string name="listview_test">List Adapter Test</string>
    <string name="recyclerview_test">Recycler Adapter Test</string>

    <string name="mode_serial">Serial Mode</string>
    <string name="mode_parallel">Parallel Mode</string>
    <string name="mode_shuffle">Shuffle Mode</string>
    <string name="mode_autoload">AutoLoad Mode</string>
</resources>
