<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <Button
            android:id="@+id/mode_serial"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="12dp"
            android:text="@string/mode_serial" />

        <Button
            android:id="@+id/mode_parallel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="12dp"
            android:text="@string/mode_parallel" />

        <Button
            android:id="@+id/mode_shuffle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="12dp"
            android:text="@string/mode_shuffle" />

        <Button
            android:id="@+id/mode_autoload"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="12dp"
            android:text="@string/mode_autoload" />
    </LinearLayout>
</ScrollView>