<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/mode_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_serial" />

        <Button
            android:id="@+id/mode_parallel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_parallel" />

        <Button
            android:id="@+id/mode_shuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_shuffle" />

    </LinearLayout>
</ScrollView>